--- a/public/style1.css
+++ b/public/style1.css
@@ -3,10 +3,11 @@
   padding: 0px;
 }
 
+
 body {
   padding: 10px;
   position: relative; 
-  text-align: center; 
+  
 }
 
 body::before{
@@ -22,6 +23,14 @@ body::before{
   z-index: -1;
 }
 
+input {
+  width: 400px;
+  height: 30px;
+  margin: 8px;
+  border-radius: 5px;
+  border: none;
+  padding-left: 10px;
+}
 
 textarea {
   width: 400px;
@@ -29,51 +38,11 @@ textarea {
   border-radius: 5px;
   border: none;
   padding: 5px 0 0 10px;
-  margin: 10px;
 }
 
-.reply {
-  border: 1px solid black;
-  border-radius: 8px;
-  margin: 12px;
-  padding: 5px;
-}
-
-.newReply {
-  margin: 10px 5px 10px 5px;
-}
-
-.thread {
-  border: 2px solid black;
-  border-radius: 8px;
-  padding: 5px;
-  margin-bottom: 10px;
-}
-
-.id {
-  font-size: 13px;
-  font-weight: bold;
-}
-
-#submitNewThread {
-  margin: 50px;
-}
-
-.btn {
+.submit {
   background-color: #701C3E;
   color: white;
   font-weight: bold;
-  width: 100px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 8px;
+  width: 250px;
 }
-.input {
-  width: 200px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 5px;
-  border: none;
-  padding-left: 10px;
-}
-
