--- a/public/style2.css
+++ b/public/style2.css
@@ -4,9 +4,9 @@
 }
 
 body {
-  padding: 10px;
+  padding: 20px;
   position: relative; 
-  text-align: center; 
+  text-align: center;
 }
 
 body::before{
@@ -22,21 +22,37 @@ body::before{
   z-index: -1;
 }
 
-
 textarea {
   width: 400px;
-  height: 60px;
+  height: 100px;
   border-radius: 5px;
   border: none;
   padding: 5px 0 0 10px;
   margin: 10px;
 }
 
+input {
+  width: 400px;
+  height: 30px;
+  margin: 8px;
+  border-radius: 5px;
+  border: none;
+  padding-left: 10px;
+}
+
+.submit {
+  background-color: #701C3E;
+  color: white;
+  font-weight: bold;
+  width: 250px;
+}
+
 .reply {
-  border: 1px solid black;
+  border: 1.5px solid black;
   border-radius: 8px;
-  margin: 12px;
+  margin: 20px 0 10px 0;
   padding: 5px;
+  
 }
 
 .newReply {
@@ -47,12 +63,14 @@ textarea {
   border: 2px solid black;
   border-radius: 8px;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  
 }
 
 .id {
   font-size: 13px;
   font-weight: bold;
+  
 }
 
 #submitNewThread {
@@ -63,17 +81,7 @@ textarea {
   background-color: #701C3E;
   color: white;
   font-weight: bold;
-  width: 100px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 8px;
+  width: 250px;
 }
-.input {
-  width: 200px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 5px;
-  border: none;
-  padding-left: 10px;
-}
+
 
