--- a/public/style.css
+++ b/public/style.css
@@ -5,37 +5,15 @@
 
 body {
   padding: 10px;
-  position: relative; 
-  text-align: center; 
 }
 
-body::before{
-  content: ""; 
-  background-image: url("https://cdn.glitch.com/f7a8fa5e-d452-4de9-93ed-1858611fb88d%2Fccf13391-7d5d-41d9-89ab-28be87cb4f92.image.png?v=1619379995692");  
-  background-repeat: repeat;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-
-textarea {
-  width: 400px;
-  height: 60px;
-  border-radius: 5px;
-  border: none;
-  padding: 5px 0 0 10px;
-  margin: 10px;
+.replies {
+  margin-left: 50px;
 }
 
 .reply {
-  border: 1px solid black;
-  border-radius: 8px;
-  margin: 12px;
+  border: 1px dotted black;
+  margin: 5px;
   padding: 5px;
 }
 
@@ -45,35 +23,14 @@ textarea {
 
 .thread {
   border: 2px solid black;
-  border-radius: 8px;
   padding: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .id {
-  font-size: 13px;
-  font-weight: bold;
+  font-size: 10.5px;
 }
 
 #submitNewThread {
   margin: 50px;
 }
-
-.btn {
-  background-color: #701C3E;
-  color: white;
-  font-weight: bold;
-  width: 100px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 8px;
-}
-.input {
-  width: 200px;
-  height: 30px;
-  margin: 3px;
-  border-radius: 5px;
-  border: none;
-  padding-left: 10px;
-}
-
